src/components/Main.css
.main {
  .jumbotron {
    min-height: clamp(130px, 21vw, 400px);
    background-image: url('../assets/img/jumbotron.jpg');
    background-size: cover;
    background-position: center top;
  }

  .comics {
    padding-bottom: 1.25rem;

    .title {
      padding-inline: 1.875rem;
      padding-block: 0.6rem;
      background-color: var(--primary);
      display: inline-block;
      transform: translateY(calc(-50%));
    }

    .list {
      padding-inline: 0.875rem;
      display: grid;
      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
      gap: 3.375rem 1.5rem;

      .card {
        display: block;

        :not(:first-child) {
          margin-top: 1.25rem;
        }

        .cover {
          overflow: hidden; /* needed for fix, see below ↓ */

          img {
            width: 100%;
            aspect-ratio: 1 / 1;
            object-fit: cover;
            object-position: top center;
          }
        }
      }

      /* NOTE: Temporary fix for non-uniform thumb images with white margins */
      li:first-child img,
      li:last-child img {
        transform: scale(1.56);
        transform-origin: top center;
      }
    }
  }
}

